	set.

2012-06-23  Daniel Willmann

        * elm_progressbar: Add "changed" signal to be emitted when the value
        is changed.

2012-06-25  Daniel Juyung Seo (SeoZ)

	* Genlist: Fixed tree expand bug. Check item type when an item is requested
	to be expanded/contracted.

2012-06-25  Carsten Haitzler (The Rasterman)

	* add elm_cnp_selection_loss_callback_set() so you know when you
        lose a selection as a client
        * improve robustness of cnp to track target object deletions.

2012-06-26  Shinwoo Kim (kimcinoo)

	* Use Edje to enable accessibility on TEXTBLOCK.

2012-06-27 Daniel Juyung Seo (SeoZ)

	* Genlist: Fixed homogeneous mode bug with ELM_OBJECT_SELECT_MODE_DISPLAY_ONLY item. Now it calculates display only item size correctly.

2012-06-29 Artem Popov

	* Add support for a new toolbar style with icon and text
        aligned in center. "item_centered".

2012-06-30  Shinwoo Kim (kimcinoo)

	* Add elm_config_access_set/get() to allow for a config tool to enable
        to diasbale access mode.
        * Add access highlight infra

2012-06-30  Artem Popov

	* Fix panel theme_hook handling for scaling

2012-07-01  Gustavo Sverzut Barbieri (k-s)

	* Add and use elm_widget_item_widget_get()
	* Fix elm_segment_control to not abuse user's data from item.

2012-07-3  Cedric Bail

	* Initialize Emotion when necessary.

2012-07-3  Minseok Kim

	* Add elm_multibuttonentry_editable_set() and
        elm_multibuttonentry_editable_get()

2012-07-3  Shinwoo Kim (kimcinoo)

	* Add access hook to widget infra.

2012-07-5  Carsten Haitzler (The Rasterman)

	* Fix several FB related issues:
          * Fallback to FB from X11 so it "just works"
          * Config expected x11 and failed to start app if engine not
            explicitly set to non-x11
          * No mouse cursor displayed in fb when needed, so add a
            softcursor mode defaulting to auto.
        * Add elm_win_screen_dpi_get()
